# wfcroot

./: .gitmodules  CMakeLists.txt  Doxyfile  Readme.md  index.html  upgrade.sh  wamba-ci.json  wfcroot.cpp  wfcroot.hpp
.ci/: suppressions.txt
.ci/orig/: .gitlab-ci.yml.orig
.cppcheck/: suppressions.txt
.github/: build_history.txt
cmake/: ci.cmake
cov-report/: index-sort-f.html  index-sort-l.html  index.html
cov-report/tests/: index-sort-f.html  index-sort-l.html  index.html  package_suite.cpp.func-sort-c.html  package_suite.cpp.func.html  package_suite.cpp.gcov.html  package_test.cpp.func-sort-c.html  package_test.cpp.func.html  package_test.cpp.gcov.html
cov-report/wfcroot/: index-sort-f.html  index-sort-l.html  index.html  wfcroot.cpp.func-sort-c.html  wfcroot.cpp.func.html  wfcroot.cpp.gcov.html
tests/: CMakeLists.txt  package_suite.cpp  package_test.cpp
wfcroot/: CMakeLists.txt  version.hpp  wfcroot.cpp  wfcroot.hpp
wonderwaffel/: CMakeLists.txt  igun.hpp  tank_domain.hpp  tank_gun.hpp  tank_options.hpp  tank_options_json.hpp  tank_package.hpp  waffel_domain.hpp  waffel_package.hpp  wonderwaffel.cpp  wonderwaffel.hpp
